# goit-web-hw-07

./: config.ini  main.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 6099884de3f5_init.py
