[tool.poetry]
name = "goit-web-hw-07"
version = "0.1.0"
description = ""
authors = ["dimaklymenko <dimaliar228@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
faker = "^33.1.0"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
